feat: include routes implementation (still ugly)
